kubernetes/messaging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging
  template:
    metadata:
      labels:
        app: messaging
    spec:
      containers:
        - name: messaging
          image: messaging:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 7777
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "250m"
