kubernetes/ws-messaging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-messaging
spec:
  #replicas: 3
  selector:
    matchLabels:
      app: ws-messaging
  template:
    metadata:
      labels:
        app: ws-messaging
    spec:
      containers:
        - name: ws-messaging
          image: ws-messaging:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 7779
