kubernetes/messaging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  type: LoadBalancer
  ports:
  - port: 7788
    targetPort: 7788
    protocol: TCP
  selector:
    app: messaging
