kubernetes/ws-messaging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-messaging-service
spec:
  type: LoadBalancer
  ports:
  - port: 7779
    targetPort: 7779
    protocol: TCP
  selector:
    app: ws-messaging
